// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client console.log clientLogLevel is silent (default) 1`] = `
Array [
  "Hey.",
  "[HMR] Waiting for update signal from WDS...",
]
`;

exports[`Client console.log clientLogLevel is silent (sockjs) 1`] = `
Array [
  "Hey.",
  "[HMR] Waiting for update signal from WDS...",
]
`;

exports[`Client console.log clientLogLevel is silent (ws) 1`] = `
Array [
  "Hey.",
  "[HMR] Waiting for update signal from WDS...",
]
`;

exports[`Client console.log hot disabled (default) 1`] = `
Array [
  "Hey.",
  "[WDS] Live Reloading enabled.",
]
`;

exports[`Client console.log hot disabled (sockjs) 1`] = `
Array [
  "Hey.",
  "[WDS] Live Reloading enabled.",
]
`;

exports[`Client console.log hot disabled (ws) 1`] = `
Array [
  "Hey.",
  "[WDS] Live Reloading enabled.",
]
`;

exports[`Client console.log hot enabled (default) 1`] = `
Array [
  "Hey.",
  "[HMR] Waiting for update signal from WDS...",
  "[WDS] Hot Module Replacement enabled.",
  "[WDS] Live Reloading enabled.",
]
`;

exports[`Client console.log hot enabled (sockjs) 1`] = `
Array [
  "Hey.",
  "[HMR] Waiting for update signal from WDS...",
  "[WDS] Hot Module Replacement enabled.",
  "[WDS] Live Reloading enabled.",
]
`;

exports[`Client console.log hot enabled (ws) 1`] = `
Array [
  "Hey.",
  "[HMR] Waiting for update signal from WDS...",
  "[WDS] Hot Module Replacement enabled.",
  "[WDS] Live Reloading enabled.",
]
`;

exports[`Client console.log liveReload & hot are disabled (default) 1`] = `
Array [
  "Hey.",
  "WebSocket connection to 'ws://localhost:8096/ws' failed: Error during WebSocket handshake: Unexpected response code: 404",
  "WebSocket connection to 'ws://localhost:8096/ws' failed: Error during WebSocket handshake: Unexpected response code: 404",
  "[WDS] Hot Module Replacement & Live Reloading are disabled!",
]
`;

exports[`Client console.log liveReload & hot are disabled (sockjs) 1`] = `
Array [
  "Failed to load resource: the server responded with a status of 404 (Not Found)",
  "Failed to load resource: the server responded with a status of 404 (Not Found)",
  "Hey.",
  "[WDS] Hot Module Replacement & Live Reloading are disabled!",
]
`;

exports[`Client console.log liveReload & hot are disabled (ws) 1`] = `
Array [
  "Hey.",
  "WebSocket connection to 'ws://localhost:8096/ws' failed: Error during WebSocket handshake: Unexpected response code: 404",
  "WebSocket connection to 'ws://localhost:8096/ws' failed: Error during WebSocket handshake: Unexpected response code: 404",
  "[WDS] Hot Module Replacement & Live Reloading are disabled!",
]
`;

exports[`Client console.log liveReload disabled (default) 1`] = `
Array [
  "Hey.",
  "[HMR] Waiting for update signal from WDS...",
  "[WDS] Hot Module Replacement enabled.",
]
`;

exports[`Client console.log liveReload disabled (sockjs) 1`] = `
Array [
  "Hey.",
  "[HMR] Waiting for update signal from WDS...",
  "[WDS] Hot Module Replacement enabled.",
]
`;

exports[`Client console.log liveReload disabled (ws) 1`] = `
Array [
  "Hey.",
  "[HMR] Waiting for update signal from WDS...",
  "[WDS] Hot Module Replacement enabled.",
]
`;

exports[`Client console.log liveReload enabled (default) 1`] = `
Array [
  "Hey.",
  "[HMR] Waiting for update signal from WDS...",
  "[WDS] Hot Module Replacement enabled.",
  "[WDS] Live Reloading enabled.",
]
`;

exports[`Client console.log liveReload enabled (sockjs) 1`] = `
Array [
  "Hey.",
  "[HMR] Waiting for update signal from WDS...",
  "[WDS] Hot Module Replacement enabled.",
  "[WDS] Live Reloading enabled.",
]
`;

exports[`Client console.log liveReload enabled (ws) 1`] = `
Array [
  "Hey.",
  "[HMR] Waiting for update signal from WDS...",
  "[WDS] Hot Module Replacement enabled.",
  "[WDS] Live Reloading enabled.",
]
`;
